--- a/Style/cardRender.css
+++ b/Style/cardRender.css
@@ -18,7 +18,6 @@
 
 .board-text {
     text-align: center;
-    font-size: 0.63vw;
     font-weight: bold;
     position: absolute;
     top: 50%;
@@ -33,6 +32,7 @@
 
 .value-card-panel {
     position: absolute;
+    font-size: 0.70vw;
     top: 13%;
     left: 3%;
     width: 17%;
@@ -46,18 +46,18 @@
     max-height: 100%;
     object-fit: contain;
     display: block;
+    pointer-events: none;
 }
 
 /* ====== Card Viewer Styles ====== */
 
-/* Styles for the grid container */
 #CardsCollectionsId {
     display: grid;
-    grid-template-columns: repeat(10, 1fr); /* Fixed 10 card on row */
-    grid-template-rows: repeat(3, 1fr); /* Fixed 3 rows */
+    grid-template-columns: repeat(10, minmax(0, 1fr));
+    grid-template-rows: repeat(3, minmax(0, 1fr));
     height: 100%;
     width: 100%;
-    gap: 2%; /* Space between cells */
+    gap: 0.5%;
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -69,7 +69,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0; /* Placeholder background */
     text-align: center;
 }
 
@@ -81,41 +80,71 @@
     aspect-ratio: 1 / 2;
     border: none;
     padding: 0;
-    background: rgb(219, 161, 35);/* Без фона, чтобы отображались только изображения */
+    background: rgb(219, 161, 35);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     cursor: pointer;
-    border-radius: 15%;
+    border-radius: 6.5%;
+    box-sizing: border-box;
+    max-width: 100%;
+    max-height: 100%; 
 }
 
 .card-image {
     position: absolute;
-    width: 100%;
-    top: 15%;
+    top: 15%; /* Отступ сверху */
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
     height: calc(100% - 15%);
-    object-fit: cover; 
+    object-fit: cover;
+    box-sizing: border-box;
+    pointer-events: none;
+}
+
+.img-selected {
+    position: absolute;
+    top: 13%;
+    right: 3%;
+    width: 30%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    pointer-events: none;
+    display: none;
+}
+
+.card-image-frame {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-sizing: border-box;
 }
 
 
 /* ====== Card Text Styles ====== */
 
 .card-name {
+    font-size: 0.75vw;
     position: absolute;
     top: 1%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 0.75vw;
     text-align: center;
     font-weight: bold;
     white-space: normal;
+    pointer-events: none;
 }
 
 .card-bottom-div {
     position: absolute;
     bottom: 0;
-    width: 98%;
+    width: 100%;
     height: 45%;
     display: flex;
     flex-direction: column;
@@ -125,6 +154,7 @@
     transform: translateX(-50%);
     border-radius: 0 0 10px 10px;
     background: rgba(255, 255, 255, 0.6);
+    pointer-events: none;
 }
 
 .card-group {
@@ -137,11 +167,28 @@
 }
 
 .card-description {
-    font-size: 0.63vw; /* Dynamic size based on cardTextFontSize */
+    font-size: 0.63vw;
     font-weight: bold;
     text-align: center;
     line-height: 1;
     white-space: normal;
     flex: 1;
-    margin: 2%;
+    margin: 1%;
+}
+
+/* ====== Big Card Panel ====== */
+.card-group-info-panel {
+    font-size: 2vw;
+}
+
+.card-description-info-panel {
+    font-size: 1.7vw;
+}
+
+.value-card-panel-info-panel {
+    font-size: 2vw;
+}
+
+.card-name-info-panel {
+    font-size: 2.1vw;
 }
