--- a/Style/cardRender.css
+++ b/Style/cardRender.css
@@ -94,11 +94,11 @@
 
 .card-image {
     position: absolute;
-    top: 15%; /* Отступ сверху */
+    top: 8%;
     left: 50%;
     transform: translateX(-50%);
     width: auto;
-    height: calc(100% - 15%);
+    height: 92%;
     object-fit: cover;
     box-sizing: border-box;
     pointer-events: none;
@@ -130,11 +130,9 @@
 /* ====== Card Text Styles ====== */
 
 .card-name {
-    font-size: 0.75vw;
+    font-size: 0.7vw;
     position: absolute;
     top: 1%;
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
     font-weight: bold;
     white-space: normal;
@@ -145,7 +143,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 45%;
+    height: 35%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,37 +156,35 @@
 }
 
 .card-group {
-    font-size: 0.70vw;
+    font-size: 0.56vw;
     text-align: center;
     font-weight: bold;
-    line-height: 0.8;
     flex: 0 0 20%;
     white-space: normal;
 }
 
 .card-description {
-    font-size: 0.63vw;
+    font-size: 0.62vw;
     font-weight: bold;
     text-align: center;
-    line-height: 1;
     white-space: normal;
     flex: 1;
-    margin: 1%;
+    margin: 0.8%;
 }
 
 /* ====== Big Card Panel ====== */
 .card-group-info-panel {
-    font-size: 2vw;
+    font-size: 1.17vw;
 }
 
 .card-description-info-panel {
-    font-size: 1.7vw;
+    font-size: 1.30vw;
 }
 
 .value-card-panel-info-panel {
-    font-size: 2vw;
+    font-size: 1.47vw;
 }
 
 .card-name-info-panel {
-    font-size: 2.1vw;
+    font-size: 1.47vw;
 }
