--- a/Style/cardRender.css
+++ b/Style/cardRender.css
@@ -143,13 +143,13 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 35%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
     border-radius: 0 0 10px 10px;
     background: rgba(255, 255, 255, 0.6);
     pointer-events: none;
@@ -159,7 +159,7 @@
     font-size: 0.56vw;
     text-align: center;
     font-weight: bold;
-    flex: 0 0 20%;
+    flex: 0 0 15%;
     white-space: normal;
 }
 
